--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
     <article id="work" class="wrapper style2">
       <div class="container">
         <header>
-          <h2>Here's all the stuff I do.</h2>
-		  <p>Odio turpis amet sed consequat eget posuere consequat.</p>
-		  
+          <h2>Skills</h2>
+		  		  
         </header>
         <div class="row aln-center">
           <div class="col-4 col-6-medium col-12-small">
