--- a/index.html
+++ b/index.html
@@ -180,27 +180,13 @@
                   <input type="text" name="name" id="name" placeholder="Name" />
                 </div>
                 <div class="col-6 col-12-small">
-                  <input
-                    type="text"
-                    name="email"
-                    id="email"
-                    placeholder="Email"
-                  />
+                  <input type="text" name="email" id="email" placeholder="Email"/>
                 </div>
                 <div class="col-12">
-                  <input
-                    type="text"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                  />
+                  <input type="text" name="subject" id="subject" placeholder="Subject"/>
                 </div>
                 <div class="col-12">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Message"
-                  ></textarea>
+                  <textarea name="message" id="message" placeholder="Message"></textarea>
                 </div>
                 <div class="col-12">
                   <ul class="actions">
